# service-oriented-architectures

./: .env  .gitignore  README.md  docker-compose.yml  example.sh
.github/workflows/: auth.yaml  auth_unit_tests.yaml  posts.yaml  posts_service_tests.yaml  posts_unit_tests.yaml  stats.yaml  stats_service_tests.yaml  stats_unit_tests.yaml
auth/: Cargo.toml  Dockerfile  README.md  build.rs  init.sql  openApi.yml  posts.proto
auth/src/: app.rs  error.rs  main.rs  models.rs  utils.rs
auth/src/handlers/: fallback.rs  init.rs  login.rs  mod.rs  posts_grpc.rs  signup.rs  stats.rs  stats_grpc.rs  update.rs  update_user.rs  users.rs  util.rs
doc/: c4-containers.puml  c4-context.puml  er.puml
posts/: Dockerfile  go.mod  go.sum  init.sql  main.go  service_test.go
posts/client/: main.go
posts/protos/: posts.pb.go  posts_grpc.pb.go
posts/server/: handlers.go  main.go  server.go  server_test.go
posts/src/: handlers.go  main.go  main_test.go
protos/: after_changes.sh  compile.sh  posts.proto  stats.proto
stats/: Dockerfile  init.sql  main.py  requirements-test.txt  requirements.txt  service_tests.py  stats_pb2.py  stats_pb2.pyi  stats_pb2_grpc.py  tests.py  unit_tests.py
tests/: end-to-end-test-1.sh  end-to-end-test-2.sh  service_tests.sh  test_end-to-end-test-1.sh  unit_tests.sh
